created custom bitmoji for myself

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <!-- Primary Meta Tags -->
-  <title>Vivek Patel Portfolio - Computer Engineering Student</title>
+  <title>Akhil S Naik, Staff Software Engineer</title>
   <meta charset="utf-8" />
-  <meta name="title" content="Vivek Patel Portfolio - Computer Engineering Student">
+  <meta name="title" content="Akhil S Naik, Staff Software Engineer">
   <meta name="description"
-    content="Vivek Patel's (vivek9patel) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
-  <meta name="author" content="Vivek Patel (vivek9patel)">
-  <meta name="keywords"
-    content="vivek9patel, vivek9patel's portfolio, vivek9patel linux, ubuntu portfolio, vivek patel protfolio, vivek patel, vivek ubuntu, vivek patel ubuntu portfolio">
+    content="Akhil S Naik's (akhilsnaik) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
+  <meta name="author" content="Akhil S Naik(akhilsnaik)">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
@@ -20,18 +18,18 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://vivek9patel.github.io/">
-  <meta property="og:title" content="Vivek Patel Portfolio - Computer Engineering Student">
+  <meta property="og:url" content="http://akhilsnaik.github.io/">
+  <meta property="og:title" content="Akhil S Naik, Staff Software Engineer">
   <meta property="og:description"
-    content="Vivek Patel's (vivek9patel) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
+    content="Akhil S Naik's (akhilsnaik) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
   <meta property="og:image" content="./images/logos/fevicon.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="http://vivek9patel.github.io/">
-  <meta property="twitter:title" content="Vivek Patel Portfolio - Computer Engineering Student">
+  <meta property="twitter:url" content="http://akhilsnaik.github.io/">
+  <meta property="twitter:title" content="Akhil S Naik, Staff Software Engineer">
   <meta property="twitter:description"
-    content="Vivek Patel's (vivek9patel) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
+    content="Akhil S Naik's (akhilsnaik) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
   <meta property="twitter:image" content="./images/logos/fevicon.svg">
 
   <link rel="icon" href="./images/logos/fevicon.svg" />
