updatedbuild/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Primary Meta Tags -->
-  <title>Akhil S Naik, Staff Software Engineer</title>
+  <title>Pravin Bhagade, Staff Product Specialist</title>
   <meta charset="utf-8" />
   <meta name="title" content="Akhil S Naik, Staff Software Engineer">
   <meta name="description"
