--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <!-- Primary Meta Tags -->
   <title>Pravin Bhagade, Staff Product Specialist</title>
   <meta charset="utf-8" />
-  <meta name="title" content="Akhil S Naik, Staff Software Engineer">
+  <meta name="title" content="Pravin Bhagade, Staff Product Specialist">
   <meta name="description"
-    content="Akhil S Naik's (akhilsnaik) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
-  <meta name="author" content="Akhil S Naik(akhilsnaik)">
+    content="Pravin Bhagade's (bhagadepravin) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
+  <meta name="author" content="Pravin Bhagade(bhagadepravin)">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
@@ -18,18 +18,18 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://akhilsnaik.github.io/">
-  <meta property="og:title" content="Akhil S Naik, Staff Software Engineer">
+  <meta property="og:url" content="http://bhagadepravin.github.io/">
+  <meta property="og:title" content="Pravin Bhagade, Staff Product Specialist">
   <meta property="og:description"
-    content="Akhil S Naik's (akhilsnaik) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
+    content="Pravin Bhagade's (bhagadepravin) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
   <meta property="og:image" content="./images/logos/fevicon.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="http://akhilsnaik.github.io/">
-  <meta property="twitter:title" content="Akhil S Naik, Staff Software Engineer">
+  <meta property="twitter:url" content="http://bhagadepravin.github.io/">
+  <meta property="twitter:title" content="Pravin Bhagade, Staff Product Specialist">
   <meta property="twitter:description"
-    content="Akhil S Naik's (akhilsnaik) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
+    content="Pravin Bhagade's (bhagadepravin) Personal Portfolio Website. Made with Ubuntu 20.4 (Linux) theme by React.js and Tailwind CSS.">
   <meta property="twitter:image" content="./images/logos/fevicon.svg">
 
   <link rel="icon" href="./images/logos/fevicon.svg" />
